service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    name: grafana
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
