ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  labels:
    stable.k8s.psg.io/kcm.class: "default"
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
    ingress.kubernetes.io/secure-backends: "false"
    ingress.kubernetes.io/backend-protocol: "HTTP"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    stable.k8s.psg.io/kcm.provider: http

    ingress.kubernetes.io/auth-tls-verify-client: "on"
    ingress.kubernetes.io/auth-tls-secret: "cdp-dev/grafana-auth"
    ingress.kubernetes.io/auth-tls-verify-depth: "1"

spec:
  rules:
    - host: monitoring.cdp-notprod.homeoffice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: http
  tls:
    - hosts:
      - monitoring.cdp-notprod.homeoffice.gov.uk
      secretName: grafana-le-tls
